--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>project-base</artifactId>
+    <groupId>codes.aliahmad</groupId>
+    <artifactId>phonebook-vaadin</artifactId>
     <name>Project base for Vaadin</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -97,6 +97,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
         </dependency>
 
         <dependency>
